Update Daytrader experiment
Provide an article style write up for the Daytrader3 experiment,
which might be linked to as a resource from twitter etc.

Include some late changes about the options used on the cmdline.

Issue at github.com/eclipse/openj9-website

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>